fix(/create): fix weird overflow on tooltip

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@ body > * {
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 a {
